--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,7 @@
 
     {% block javascripts %}
         {# {{ encore_entry_script_tags('app') }} #}
+        <script defer src="{{ asset('js/widgetdarkmode.js') }}"></script>
     {% endblock %}
     
 </head>
