--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,7 +11,7 @@
 
   <!-- Title (accueil) -->
   <div class="pl-24 py-14 pt-24">
-      <h1 class="text-6xl leading-6 ">Accueil</h1>
+      <h1 class="text-6xl leading-6 text-blue-600 dark:text-white">Accueil</h1>
   </div>
 
   <!-- Message bienvenue + prénom + date-->
@@ -22,11 +22,11 @@
 
 <!-- Pointeuse -->
 {% if userPlannedThisDay == false %}
-  <div class=" block w-2/3 text-center text-xl p-10 m-16 h-auto dark:bg-slate-900 rounded-lg border border-amber-500 ">
+  <div class=" block w-2/3 text-center text-xl p-10 m-16 h-auto bg-blue-200 dark:bg-slate-900 rounded-lg border dark:border-amber-500 ">
 
     <div class="flex absolute h-10 w-10 m-2">
         <span class="animate-ping absolute inline-flex h-full w-full rounded-full ">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 text-amber-500 dark:text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
           </svg>
         </span>
