--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -9,7 +9,7 @@
 
     <!-- Title -->
     <div class="pl-24 py-14 pt-24">
-        <h1 class="text-6xl">Mon Profil</h1>
+        <h1 class="text-6xl text-blue-600 dark:text-white">Mon Profil</h1>
     </div>
 
     <!-- BLOCK START-->
@@ -19,7 +19,7 @@
         <div class="md:mx-2">
 
             <!-- Profil Card -->
-            <div class="bg-white pt-5 pb-8 px-5 rounded-tl-lg rounded-bl-lg border-t-4 border-green-500 max-w-max dark:dark:bg-slate-900 dark:text-white">
+            <div class="bg-white pt-5 pb-8 px-5 rounded-tl-lg rounded-bl-lg border-t-4 border-blue-600 max-w-max dark:bg-slate-900 dark:text-white">
                 <div class="image overflow-hidden my-4 max-w-xs ">
                     <img class="h-auto w-full mx-auto"
                         src="{{ user.picture}}"
@@ -29,7 +29,7 @@
                 <h3 class="text-gray-600 dark:text-white font-lg text-semibold leading-6">{{ user.job.name}}</h3>
                 <p class="text-sm dark:text-white text-gray-500 leading-6">Département : {{ user.departement.name}}</p>
                 <ul
-                    class="bg-gray-100 text-gray-600 hover:shadow py-2 px-3 mt-5 divide-y rounded shadow-sm dark:dark:bg-slate-800 dark:text-white">
+                    class="bg-gray-100 text-gray-600 hover:shadow py-2 px-3 mt-5 divide-y rounded shadow-sm dark:bg-slate-800 dark:text-white">
                     <li class="flex items-center py-3">
                         <span>Status</span>
                         <span class="ml-auto"><span
@@ -49,7 +49,7 @@
         <div class="max-w-max ">
             
             <!-- Section A propos-->
-            <div class="bg-white p-4 shadow-sm rounded-tr-lg rounded-br-lg border-t-4 border-green-500 max-w-max dark:dark:bg-slate-900 dark:text-white">
+            <div class="bg-white p-4 shadow-sm rounded-tr-lg rounded-br-lg border-t-4 border-blue-600 max-w-max dark:bg-slate-900 dark:text-white">
                 
                 <div class="flex items-center space-x-2 font-semibold text-gray-900 dark:text-white leading-8 my-4">
                     <span clas="text-green-500">
