--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -14,12 +14,12 @@
 
     
 <!-- !Sidebar responsive TEST-->
-<div class="fixed flex flex-col w-14 hover:w-64 md:w-64  bg-slate-200 h-full  transition-all duration-300 border-none z-10 sidebar dark:bg-slate-900 dark:text-white">
+<div class="fixed flex flex-col w-14 hover:w-64 md:w-64  bg-slate-300 h-full  transition-all duration-300 border-none z-10 sidebar dark:bg-slate-900 dark:text-white">
 
   <!-- Title -->
   <div class="flex justify-start p-10 items-center space-x-3 -ml-12 md:m-auto">
-        <a href="{{ path('home') }}" class="md:text-4xl text-base text-white font-bold z-20 mx-auto flex flex-col text-center"> Quick
-            <span class="before:block before:absolute before:-inset-y-1 before:-inset-x-0 before:-skew-y-3 before:bg-blue-900 relative inline-block z-10 md:m-2 m-1">
+        <a href="{{ path('home') }}" class="md:text-4xl text-base text-slate-700 dark:text-white font-bold z-20 mx-auto flex flex-col text-center"> Quick
+            <span class="before:block before:absolute before:-inset-y-1 before:-inset-x-0 before:-skew-y-3 before:bg-blue-600 before:dark:bg-blue-900 relative inline-block z-10 md:m-2 m-1">
                 <span class="relative text-white p-2.5">Work</span>
             </span>
         </p>
@@ -29,6 +29,29 @@
   <!-- Liste des liens de navigation -->
   <div class="px-2 w-full">  
     <ul class="flex flex-col py-4 space-y-4">
+    <!-- ACCUEIL-->
+      <li>
+        <a href="{{ path('home') }}" class="flex justify-start items-center 
+                                group 
+                                rounded                                     
+                                border-transparent 
+                                hover:shadow-md
+                                hover:font-semibold
+                                hover:text-white
+                                hover:bg-blue-600
+                                focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900
+                                focus:text-white
+                                relative flex-row h-11 focus:outline-none
+                                py-4">
+          <span class="inline-flex justify-center items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" class="h-10 w-10 text-blue-500 group-hover:stroke-white group-focus:stroke-white inline-flex justify-center items-center">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+            </svg>
+          </span>
+          <span class="ml-2 text-base tracking-wide truncate">Accueil</span>
+        </a>
+      </li>
+
     <!-- PROFIL-->
       <li>
         <a href="{{ path('profil') }}" class="flex justify-start items-center 
