--- a/templates/planning/comparative.planning.html.twig
+++ b/templates/planning/comparative.planning.html.twig
@@ -4,13 +4,18 @@
 
 {% block page_contents %}
 <!--  !PARTIE CENTRALE-->
-   
+
+
+
 <!-- Integration fo the new planning -->
 <div class="fixed flex flex-col ml-14 mb-10 md:ml-64 lg:ml-64 xl:ml-64 w-full h-full dark:bg-slate-800 dark:text-white overflow-auto">
     <div class="w-[75rem]">
+
+    {% if effectiveWorkDay %}  
+
         <!-- Title (accueil) -->
         <div class="pl-10 sm:pl-24 py-14 pt-24">
-            <p class="text-4xl">Mon planning</p>  
+            <p class="text-4xl">Comparatif planning du {{ plannedWorkDay['startshift'] ? plannedWorkDay['startshift']|date('d/m/Y') : ''}} </p>  
             {% if pos is same as false %}
            <p class="text-2xl text-amber-600">{{gap}}</p>
             {% else %}
@@ -21,51 +26,85 @@
         <!-- Start TABLE -->        
         <div class="mx-auto">  
             <div class="grid sm:grid-cols-1 xl:grid-cols-2"> 
-                {% for i in 0..1 %}
                 <table class="w-[22rem] sm:w-[30rem] sm:m-4 shadow-xl dark:bg-slate-900 ">
                     <thead>    
                         <tr class="bg-slate-500 dark:bg-opacity-20 text-center">
-                            <th colspan="2" class=" bg-blue-800 border-l border-r border-t p-4 pl-8 pr-8 text-slate-400 dark:text-slate-200">{{ header[i]}}</th>
+                            <th colspan="1" class=" bg-blue-800 border-l border-t p-4 pl-8 pr-8 text-slate-400 dark:text-slate-200">{{ plannedWorkDay['startshift'] ? plannedWorkDay['startshift']|date('d/m/Y') : ''}}</th>
+                            <th colspan="1" class=" bg-blue-800 border-t p-4 pl-8 pr-8 text-slate-400 dark:text-slate-200">Heures prévues</th>
+                            <th colspan="1" class=" bg-blue-800 border-r border-t p-4 pl-8 pr-8 text-slate-400 dark:text-slate-200">Heures réalisées</th>
                         </tr>
                     </thead>  
                     <tbody >
                     
                         <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border border-grey-light">Début de journée</td>
-                        <td class="py-4 px-6 text-center border border-grey-light ">
-                            {{ user.plannedWorkDays[i].startshift ? user.plannedWorkDays[i].startshift|date('H:i') : '' }}
+                        <td class="py-4 px-6 border-t border-l border-grey-light">Début de journée</td>
+                        <td class="py-4 px-6 text-center border-t border-grey-light ">
+                            {{ plannedWorkDay['startshift'] ? plannedWorkDay['startshift']|date('H:i') : '' }}
+                        </td>
+                        <td class="py-4 px-6 text-center border-t border-r border-grey-light ">
+                            {{ effectiveWorkDay['startlog'] ? effectiveWorkDay['startlog']|date('H:i') : '' }}
                         </td>
                         </tr>
                         <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border border-grey-light">Début de pause repas</td>
-                        <td class="py-4 px-6 text-center border border-grey-light">
-                            {{ user.plannedWorkDays[i].startlunch ? user.plannedWorkDays[i].startlunch|date('H:i') : '' }}
+                        <td class="py-4 px-6 border-l border-t border-grey-light">Début de pause repas</td>
+                        <td class="py-4 px-6 text-center border-t border-grey-light">
+                            {{ plannedWorkDay['startlunch'] ? plannedWorkDay['startlunch']|date('H:i') : '' }}
+                        </td>
+                        <td class="py-4 px-6 text-center border-t border-r border-grey-light">
+                            {{ effectiveWorkDay['startlunch'] ? effectiveWorkDay['startlunch']|date('H:i') : '' }}
                         </td>
                         </tr>
                         <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border border-grey-light">Fin de pause repas</td>
-                        <td class="py-4 px-6 text-center border border-grey-light">
-                            {{ user.plannedWorkDays[i].endlunch ? user.plannedWorkDays[i].endlunch|date('H:i') : '' }}
+                        <td class="py-4 px-6 border-t border-l border-grey-light">Fin de pause repas</td>
+                        <td class="py-4 px-6 text-center border-t border-grey-light">
+                            {{ plannedWorkDay['endlunch'] ? plannedWorkDay['endlunch']|date('H:i') : '' }}
+                        </td>
+                        <td class="py-4 px-6 text-center border-t border-r border-grey-light">
+                            {{ effectiveWorkDay['endlunch'] ? effectiveWorkDay['endlunch']|date('H:i') : '' }}
                         </td>
                         </tr>
                         <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border border-grey-light">Fin de journée</td>
-                        <td class="py-4 px-6 text-center border border-grey-light">
-                            {{ user.plannedWorkDays[i].endshift ? user.plannedWorkDays[i].endshift|date('H:i') : '' }}
+                        <td class="py-4 px-6 border-l border-t border-grey-light">Fin de journée</td>
+                        <td class="py-4 px-6 text-center border-t border-grey-light">
+                            {{ plannedWorkDay['endshift'] ? plannedWorkDay['endshift']|date('H:i') : '' }}
+                        </td>
+                        <td class="py-4 px-6 text-center border-t border-r border-grey-light">
+                            {{ effectiveWorkDay['endlog'] ? effectiveWorkDay['endlog']|date('H:i') : '' }}
                         </td>
                         </tr>
                         <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border border-grey-light">Heures par jour</td>
-                        <td class="py-4 px-6 text-center border border-grey-light">
-                            {{ user.plannedWorkDays[i].hoursplanned ? user.plannedWorkDays[i].hoursplanned|date('H:i') : '' }}
+                        <td class="py-4 px-6 border-l border-b border-t border-grey-light">Heures par jour</td>
+                        <td class="py-4 px-6 text-center border-b border-t border-grey-light">
+                            {{ plannedWorkDay['hoursplanned'] ? plannedWorkDay['hoursplanned']|date('H:i') : '' }}
+                        </td>
+                        <td class="py-4 px-6 text-center border-b border-r border-t border-grey-light">
+                            {{ effectiveWorkDay['hoursworked'] ? effectiveWorkDay['hoursworked']|date('H:i') : '' }}
                         </td>
                         </tr>
                     </tbody>
                 </table>
-                {% endfor %}
             </div>
         </div>
         <!-- End TABLE -->
+
+        {% else %}
+
+        <div class=" block w-2/3 text-center text-xl p-10 m-16 h-auto dark:bg-slate-900 rounded-lg border border-amber-500 ">
+    <div class="flex absolute h-10 w-10 m-2">
+        <span class="animate-ping absolute inline-flex h-full w-full rounded-full ">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+          </svg>
+        </span>
+        <span class="relative inline-flex rounded-full h-4 w-4 "></span>
+    </div>
+    <div class="m-2">
+        <p>Vous n'avez pas encore pouvez pas déclarer d'heures effectuées à ce jour.</p>
+        <p>Veuillez vous remplir votre <a class="max-w-fit text-blue-600 font-semibold hover:text-white " href="{{ path('home') }}">compteur</a></p>
+    </div>
+{% endif %}
+
+  </div>
     </div>
 </div>
 <!-- End of the new integration -->
