--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block page_contents %}
 
-<script defer src="{{ asset('js/pointage.js') }}"></script>
+<script defer src="{{ asset('/js/pointage.js') }}"></script>
 
 <!-- Partie centrale -->
 <div class="fixed flex flex-col h-full ml-14 mb-10 md:ml-64 bg-slate-100 dark:bg-slate-800 dark:text-white w-full">
