fix some styles add file env

--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -27,7 +27,7 @@
 
             {% for user in dptUser %}
 
-            <div class="max-w-max dark:bg-slate-900 dark:text-white rounded-lg flex flex-col justify-center items-center px-10 py-5">
+            <div class="max-w-max dark:bg-slate-900 dark:text-white bg-slate-100 shadow-lg rounded-lg flex flex-col justify-center items-center px-10 py-5">
                 <div class="mb-8">
                     <img class="object-center object-cover rounded-full h-36 w-36" src="{{ user.picture }}" alt="photo">
                 </div>
