--- a/templates/management_rh/index.html.twig
+++ b/templates/management_rh/index.html.twig
@@ -14,7 +14,21 @@
     </div>
 
     <!-- Recherche -->
-    <div class="bg-slate-900 ml-2 sm:ml-24 mt-20 max-w-fit rounded-lg">
+        <div class="bg-slate-900 ml-2 sm:ml-24 mt-20 max-w-fit rounded-lg">
+            {% for message in app.flashes('no_user') %}
+                <div class="text-center text-white px-6 py-4 border-0 rounded relative mb-4 bg-indigo-500">
+                      <span class="text-xl inline-block mr-5 align-middle">
+                        <i class="fas fa-bell" />
+                          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                          </svg>
+                      </span>
+                        <span class="inline-block align-middle mr-8 ">
+                            <b>{{message}}</b>
+                        </span>
+                    </button>
+                </div>
+            {% endfor %}
         <form method="post" action="{{ path('managementrh_search') }}" class="flex flex-wrap p-5">
             <label class="my-4 font-semibold ">Recherche d'un salarié :
                 <input name="salarie" type="text" class="inputLoginMail text-black" placeholder="Entrer nom et prénom" required>
