Feat : Add menu on sidebar, Change property on Event Entity, Create template event/index.html.twig, Create Event Controller

--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -22,7 +22,7 @@
             <span class="before:block before:absolute before:-inset-y-1 before:-inset-x-0 before:-skew-y-3 before:bg-blue-600 before:dark:bg-blue-900 relative inline-block z-10 md:m-2 m-1">
                 <span class="relative text-white p-2.5">Work</span>
             </span>
-        </p>
+        </a>
   </div>
   
 
@@ -97,6 +97,30 @@
             </svg>
           </span>
           <span class="ml-2 text-base tracking-wide truncate">Planning</span>
+        </a>
+      </li>
+
+      <!-- Congé/Formation-->
+      <li>
+        <a href="{{ path('event') }}" class="flex justify-start items-center
+                                group
+                                rounded
+                                border-transparent
+                                hover:shadow-md
+                                hover:font-semibold
+                                hover:text-white
+                                hover:bg-blue-600
+                                focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900
+                                focus:text-white
+                                relative flex-row h-11 focus:outline-none
+                                py-4">
+          <span class="inline-flex justify-center items-center">
+            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                 class="h-10 w-10 text-blue-500 group-hover:stroke-white group-focus:stroke-white inline-flex justify-center items-center">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 14l6-6m-5.5.5h.01m4.99 5h.01M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16l3.5-2 3.5 2 3.5-2 3.5 2zM10 8.5a.5.5 0 11-1 0 .5.5 0 011 0zm5 5a.5.5 0 11-1 0 .5.5 0 011 0z" />
+            </svg>
+          </span>
+          <span class="ml-2 text-base tracking-wide truncate">Congé/Formation</span>
         </a>
       </li>
 
