--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -14,7 +14,7 @@
 
     
 <!-- !Sidebar responsive TEST-->
-<div class="fixed flex flex-col w-14 hover:w-64 md:w-64  bg-slate-300 h-full  transition-all duration-300 border-none z-10 sidebar dark:bg-slate-900 dark:text-white">
+<div class="fixed flex flex-col w-14 hover:w-64 md:w-64  bg-slate-300 h-full  transition-all duration-300 border-none z-10 sidebar dark:bg-slate-900 dark:text-white overflow-auto">
 
   <!-- Title -->
   <div class="flex justify-start p-10 items-center space-x-3 -ml-12 md:m-auto">
