some change for responsive

--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -13,8 +13,7 @@
     </div>
 
     <!-- BLOCK START-->
-    <div class="px-10 sm:mr-2 
-                flex flex-wrap">
+    <div class="mx-2 sm:px-10 flex flex-wrap">
         <!-- Left Side -->
         <div class="md:mx-2">
 
@@ -49,7 +48,7 @@
         <div class="max-w-max ">
             
             <!-- Section A propos-->
-            <div class="bg-white p-4 shadow-sm rounded-tr-lg rounded-br-lg border-t-4 border-blue-600 max-w-max dark:bg-slate-900 dark:text-white">
+            <div class="bg-white p-4 shadow-sm rounded-tr-lg rounded-br-lg border-t-4 border-blue-600 max-w-max dark:bg-slate-900 dark:text-white overflow-x-auto">
                 
                 <div class="flex items-center space-x-2 font-semibold text-gray-900 dark:text-white leading-8 my-4">
                     <span clas="text-green-500">
@@ -62,7 +61,7 @@
                     <span class="tracking-wide">A propos</span>
                 </div>
                 
-                <div class="text-gray-700 w-[60rem] dark:text-white">
+                <div class="text-gray-700 w-[36rem] sm:w-[60rem] dark:text-white">
                     <div class="grid md:grid-cols-2 text-sm">
                         <div class="grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2 ">
                             <div class="px-4 py-2 font-semibold">Prénom</div>
