--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -69,3 +69,17 @@
 .singleCellSecondSection {
     @apply grid grid-cols-2 border-b border-slate-200 dark:border-slate-600 py-2
 }
+
+/* Components for templates/planning/user.planning.html.twig */
+
+.tbodyPlanningHidden {
+    @apply bg-slate-100 dark:bg-slate-900 hidden
+}
+
+.tbodyPlanning  {
+    @apply bg-slate-100 dark:bg-slate-900
+}
+
+.tableDayPlanning {
+    @apply w-[22rem] sm:w-[30rem] sm:m-4 shadow-xl dark:bg-slate-900 cursor-pointer dark:focus:bg-slate-600
+}
