--- a/templates/planning/user.planning.html.twig
+++ b/templates/planning/user.planning.html.twig
@@ -3,81 +3,78 @@
 {% block title %}Mon planning{% endblock %}
 
 {% block page_contents %}
+
+<script defer src="{{ asset('/js/togglePlanning.js') }}"></script>
+
 <!--  !PARTIE CENTRALE-->
    
 <!-- Integration fo the new planning -->
 <div class="fixed flex flex-col ml-14 mb-10 md:ml-64 lg:ml-64 xl:ml-64 w-full h-full dark:bg-slate-800 dark:text-white overflow-auto">
     <div class="w-[75rem]">
-        <!-- Title (accueil) -->
+    
+    <!-- Title (accueil) -->
         <div class="pl-10 sm:pl-24 py-14 pt-24">
-        {% if totalHoursWeek != null %}
             <p class="text-4xl">Mon planning</p>
-
-            <p class="text-2xl indent-8">Total semaine {{ totalHoursWeek }}</p> 
-
-        {% else %}
-
-        <div class=" block w-2/3 text-center text-xl p-10 m-16 h-auto dark:bg-slate-900 rounded-lg border border-amber-500 ">
-
-        <div class="flex absolute h-10 w-10 m-2">
-            <span class="animate-ping absolute inline-flex h-full w-full rounded-full ">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
-                </svg>
-            </span>
-            <span class="relative inline-flex rounded-full h-4 w-4 "></span>
         </div>
+
+
+    <!-- Start TABLE -->    
+
+        {% if totalHoursWeek != null %}
+        <!-- Total hours -->
+
+        <p class="text-2xl indent-8">Total semaine {{ totalHoursWeek }}</p> 
+        {% else %}
+        <div class=" block w-2/3 text-center text-xl p-10 m-16 h-auto dark:bg-slate-900 rounded-lg border border-amber-500 ">
+            <div class="flex absolute h-10 w-10 m-2">
+                <span class="animate-ping absolute inline-flex h-full w-full rounded-full ">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                    </svg>
+                </span>
+                <span class="relative inline-flex rounded-full h-4 w-4 "></span>
+            </div>
             <div class="m-2">
                 <p>Vous ne pouvez pas déclarer votre journée en raison d'un manque de plannification ce jour.</p>
                 <p>Veuillez vous rapprocher de votre <a class="max-w-fit text-blue-600 font-semibold hover:text-white " href="{{ path('profil_id', {'id' : dptManager['id']}) }}">responsable</a></p>
-        </div>
+            </div>
         </div>
         {% endif %}
 
-        </div>
 
-        <!-- Start TABLE -->        
         <div class="mx-auto">  
             <div class="grid sm:grid-cols-1 xl:grid-cols-2"> 
                 {% set weekDay = ['lundi 21/03/22', 'mardi 22/03/22', 'mercredi 23/03/22', 'jeudi 24/03/22', 'vendredi 25/03/22'] %}
                 {% for user in user.plannedWorkDays %} 
-                <table class="w-[22rem] sm:w-[30rem] sm:m-4 shadow-xl dark:bg-slate-900 ">
+                <table class="tableDayPlanning">
                     <thead>
-                        <tr>
-                        <th class="py-4 px-6 bg-blue-800 font-bold uppercase text-sm text-white border-b border-grey-light">{{ cycle(weekDay, loop.index -1 )}}</th>
-                        <th class="py-4 px-6 bg-blue-800 font-bold uppercase text-sm text-white border-b border-grey-light text-left">
-                            <button>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-                            </svg>
-                        </button>
-                        </th>
-                        </tr>
+                    <tr>
+                        <th colspan="2" class="py-4 px-6 bg-blue-800 hover:bg-blue-700 font-bold uppercase text-sm text-white border-b border-grey-light">{{ cycle(weekDay, loop.index -1 )}}</th>
                     </thead>
-                    <tbody >
-                        <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border-b border-grey-light">Début de journée</td>
-                        <td class="py-4 px-6 text-left border-b border-grey-light">
-                            {{ user.startshift ? user.startshift|date('H:i') : '' }}
-                        </td>
+                    <tbody class="tbodyPlanningHidden">
+                        <tr class="hover:bg-slate-50 dark:hover:bg-slate-800">
+                            <td class="py-4 px-6 border-b border-slate-300">Début de journée</td>
+                            <td class="py-4 px-6 text-left border-b border-slate-300">
+                                {{ user.startshift ? user.startshift|date('H:i') : '' }}
+                            </td>
                         </tr>
-                        <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border-b border-grey-light">Début de pause repas</td>
-                        <td class="py-4 px-6 text-left border-b border-grey-light">
-                            {{ user.startlunch ? user.startlunch|date('H:i') : '' }}
-                        </td>
+                        <tr class="hover:bg-slate-50 dark:hover:bg-slate-800">
+                            <td class="py-4 px-6 border-b border-slate-300">Début de pause repas</td>
+                            <td class="py-4 px-6 text-left border-b border-slate-300">
+                                {{ user.startlunch ? user.startlunch|date('H:i') : '' }}
+                            </td>
                         </tr>
-                        <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border-b border-grey-light">Fin de pause repas</td>
-                        <td class="py-4 px-6 text-left border-b border-grey-light">
-                            {{ user.endlunch ? user.endlunch|date('H:i') : '' }}
-                        </td>
+                        <tr class="hover:bg-slate-50 dark:hover:bg-slate-800">
+                            <td class="py-4 px-6 border-b border-slate-300">Fin de pause repas</td>
+                            <td class="py-4 px-6 text-left border-b border-slate-300">
+                                {{ user.endlunch ? user.endlunch|date('H:i') : '' }}
+                            </td>
                         </tr>
-                        <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border-b border-grey-light">Fin de journée</td>
-                        <td class="py-4 px-6 text-left border-b border-grey-light">
-                            {{ user.endshift ? user.endshift|date('H:i') : '' }}
-                        </td>
+                        <tr class="hover:bg-slate-50 dark:hover:bg-slate-800">
+                            <td class="py-4 px-6 border-b border-slate-300">Fin de journée</td>
+                            <td class="py-4 px-6 text-left border-b border-slate-300">
+                                {{ user.endshift ? user.endshift|date('H:i') : '' }}
+                            </td>
                         </tr>
                     </tbody>
                 </table>
