update total hours

--- a/templates/planning/user.planning.html.twig
+++ b/templates/planning/user.planning.html.twig
@@ -11,7 +11,7 @@
 <!-- Integration fo the new planning -->
 <div class="fixed flex flex-col ml-14 mb-10 md:ml-64 lg:ml-64 xl:ml-64 w-full h-full dark:bg-slate-800 dark:text-white overflow-auto">
     <div class="w-[75rem]">
-    
+
     <!-- Title (accueil) -->
         <div class="pl-10 sm:pl-24 py-14 pt-24">
             <p class="text-4xl">Mon planning</p>
@@ -23,7 +23,7 @@
         {% if totalHoursWeek != null %}
         <!-- Total hours -->
 
-        <p class="text-2xl indent-8">Total semaine {{ totalHoursWeek }}</p> 
+        <p class="text-2xl indent-8 mt-12 mb-8">Total semaine : {{ totalHoursWeek }}</p> 
         {% else %}
         <div class=" block w-2/3 text-center text-xl p-10 m-16 h-auto dark:bg-slate-900 rounded-lg border border-amber-500 ">
             <div class="flex absolute h-10 w-10 m-2">
